# MyRiddleRiddle

./: .gitignore  Agents.md  Architechture.md  Design.md  README.md  config.py  download_podcasts.py  etl.py  extract_riddles.py  main.py  pyproject.toml  riddle_scoring.py  transcribe_podcast.py
data/metadata/: dl_meta.json
etl/: diarize_podcast.py  download_podcasts.py  transcribe_podcasts.py
utilities/: logging.py  utility.py
