[project]
name = "myriddleriddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyannote-audio>=4.0.3",
    "regex>=2025.11.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
]
